# pautanews

./: .env.example  .gitignore  ANALISE_BACKEND.md  BLUEPRINT_FINAL_Radar_Hard_News_Fev2026.md  FRONTEND_TASKS.md  PLANO_EXECUCAO_SPRINTS_BLUEPRINT_FEV2026.md  PLANO_FRONTEND_EDITORIAL.md  STATUS_HANDOFF_PENDENCIAS_FEV2026.md  TASKS_ANALISE_BLUEPRINT_GAPS_FEV2026.md  TASKS_MVP_Radar_Hard_News_Fev2026.md  brainstormfrontend.html  docker-compose.yml
backend/: Dockerfile  celerybeat-schedule  convert_sources.py  generate_migration.py  pyproject.toml  sources_legacy.yaml
backend/alembic/: env.py
backend/alembic/versions/: 6fc6b6f59c87_initial_schema.py  75f20e020a62_fix_event_score_type.py  7e6903fd559c_add_event_summary_fields.py  9cfebef42014_add_simhash_and_drafting_fields.py  d3476f62069a_add_event_lane.py
backend/app/: __init__.py  celery_app.py  cms.py  config.py  db.py  dedup.py  deltas.py  event_state_service.py  health.py  logging_config.py  main.py  merge_service.py  metrics.py  observability.py  regex_pack.py  scheduler.py  split_service.py  state_engine.py
backend/app/api/: cms.py  feedback.py  ui.py
backend/app/core/: similarity.py  (+2 more)
backend/scripts/: __init__.py  audit_sources_live.py  replay_backtest_gate.py
backend/tests/: test_convert_sources.py  test_extract_contracts.py  test_fetch_request_spec.py  test_health_starvation.py  test_pdf_extractor.py  test_queue_metrics.py  test_regex_pack.py  test_replay_backtest_gate.py  test_scheduler_cadence.py  test_scoring.py  test_source_profile_validation.py  test_split_service.py  test_state_engine.py
(+46 files in other folders)
